--- a/Assets/css/scss/faq/_faq.scss
+++ b/Assets/css/scss/faq/_faq.scss
@@ -1,19 +1,20 @@
 
 #faq-section {
-	max-width: 100vw;
+	max-width: 100%;
 	width: 100vw;
-	padding: 75px 15px 75px;
+	padding: 75px 0px;
 	opacity: 1;
 	transition: 
 		padding 1s ease-out,
 		opacity 2s ease-out;
 	&.preload-hide {
 		opacity: 0;
-		padding: 50px 15px 75px;
+		padding: 50px 0px 75px;
 	}
 	
 	.faq-container {
 		margin: 0 auto;
+		padding: 0 15px;
 		max-width: 450px;
 		@media screen and (min-width: 1000px) {
 			max-width: 600px;
